--- a/bootsrap-customization/Style/master.scss
+++ b/bootsrap-customization/Style/master.scss
@@ -6,7 +6,7 @@
 // Our custom theming of boostrap
 @import "theme.scss";
 
-//Bootstrap
+//Bootstrap default
 @import "bootstrap/bootstrap.scss";
 
 //  Style overwriting Bootstrap
